--- a/pure-clone.html
+++ b/pure-clone.html
@@ -9,18 +9,38 @@
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 
+  <script defer>
+    const scrollFunction = () => {
+      const nav = document.querySelector('nav')
+      document.body.scrollTop > 50|| document.documentElement.scrollTop > 50 ? 
+      nav.style.height = '50px' : 
+      nav.style.height = '80px'
+    }
+    window.onscroll = () => scrollFunction()
+  </script>
+
   <style>
     * {
       margin: 0;
       padding: 0;
-      font-size: 16px;
+      font-size: 14px;
       font-family: 'Inter', sans-serif;
     }
+    body {
+      height: 200vh;
+    }
     nav {
+      box-shadow: 0 8px 24px rgb(0 0 0 / 15%);
+
       display: flex;
       justify-content: center;
 
+      position: fixed;
+
+      transition: all 0.2s ease;
+
       /* padding-left: .5em; */
+      width: 100%;
       height: 80px;
     }
     .nav-inner-wrapper {
@@ -34,7 +54,33 @@
       width: 150px;
     }
     .nav-items {
+      color: #919191;
+      cursor: pointer;
       display: flex;
+      padding: 0 10px;
+    }
+
+    .nav-items span {
+      padding: 0 10px;
+    }
+
+    .search-icon {
+      color: #292929;
+    }
+
+    .get-pricing-btn {
+      background: linear-gradient(214.77deg,#feb804 -27.58%,#fe5000 100%);
+      border: 1px solid transparent;
+      color: white;
+      cursor: pointer;
+      margin-left: 21.5px;
+      padding: 12px 19px;
+    }
+
+    .get-pricing-btn:hover {
+      background: white;
+      border: 1px solid #fe5000;
+      color: #fe5000;
     }
   </style>
 
@@ -66,7 +112,7 @@
       </div>
 
       <div class="nav-end-buttons">
-        <i class="fas fa-search"></i>
+        <i class="fas fa-search search-icon"></i>
         <button class="get-pricing-btn">Get Pricing</button>
       </div>
     </div>
